# flood-exposure-geospatial-pipeline

./: .gitignore  README.md  example.py  pyproject.toml
data/processed/: chirps_clipped_aoi.nc  district_metrics.geojson
docs/: README.md
notebooks/: Visulization.ipynb  cubes_tensors_demo.ipynb  flood_exposure_assessment.ipynb
scripts/: load_buildings.py
src/: __init__.py  buildings.py
src/_01_data_loading/: __init__.py  buildings.py  rainfall_processing.py
src/_02_processing/: __init__.py  cubes.py  dem_processing.py  tensors.py
src/_03_analysis/: __init__.py  exposure.py  hydrology.py
tests/: test_buildings.py  test_cubes.py  test_dem_processing.py  test_exposure.py  test_flood_propensity.py  test_hydrology.py  test_rainfall_processing.py  test_tensors.py
