[tool.poetry]
name = "flood-exposure-geospatial-pipeline"
version = "0.1.0"
description = "Flood Exposure Assessment in the Nile Basin Region Using DEM-Derived Flow Accumulation and Drainage Network Analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = ">=1.24.0"
scipy = ">=1.10.0"
pandas = ">=2.0.0"
geopandas = ">=0.14.0"
rasterio = ">=1.3.0"
fiona = ">=1.9.0"
shapely = ">=2.0.0"
pyproj = ">=3.5.0"
xarray = ">=2023.1.0"
netcdf4 = ">=1.6.0"
zarr = ">=2.14.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
plotly = ">=5.14.0"
folium = ">=0.14.0"
scikit-learn = ">=1.3.0"
torch = ">=2.0.0"
tqdm = ">=4.65.0"
pyyaml = ">=6.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"
jupyterlab = ">=4.0.0"
ipykernel = ">=6.21.0"
ipywidgets = ">=8.0.0"
pytest = ">=7.3.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"
ruff = ">=0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
